Fix right whitespace

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body {
   display: block;
   width: 100vw;
   min-height: 100vh;
+  box-sizing: border-box;
 }
 .content {
   z-index: 1;
